--- a/index.html
+++ b/index.html
@@ -317,6 +317,6 @@
         </div>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 </html>
