--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                     <img src="assets/image.png" alt="Testimonial Author">
                                 </div>
                                 <div class="author-info">
-                                    <h4 class="author-name" data-en="test1" data-es="test1">test1</h4>
-                                    <p class="author-title" data-en="Director " data-es="Director ">Director</p>
+                                    <h4 class="author-name" data-en="Josefina Lazo" data-es="Josefina Lazo">test1</h4>
+                                    <p class="author-title" data-en="Digital Agency Director" data-es="Directora de Agencia Digital ">Digital Agency Director</p>
                                 </div>
                             </div>
                         </div>
