--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                                 <div class="author-image">
                                     <img src="assets/image.png" alt="Testimonial Author">
                                 </div>
-                                <div class="author-info">
-                                    <h4 class="author-name" data-en="Josefina Lazo" data-es="Josefina Lazo">test1</h4>
+                                <div class="author-info"> 
+                                    <h4 class="author-name" data-en="Josefina Lazo" data-es="Josefina Lazo">Josefina Lazo</h4>
                                     <p class="author-title" data-en="Digital Agency Director" data-es="Directora de Agencia Digital ">Digital Agency Director</p>
                                 </div>
                             </div>
