--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <p class="section-subtitle" data-en="Comprehensive digital solutions to help your business grow" data-es="Soluciones digitales completas para ayudar a tu negocio a crecer">Comprehensive digital solutions to help your business grow</p>
                 </div>
                 <div class="services-grid">
+                    <a href="https://www.rompecabeza.cl/" target="_blank" rel="noopener noreferrer" class="service-link" >
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-laptop-code"></i>
@@ -70,6 +71,8 @@
                         <h3 class="service-title" data-en="Web Development" data-es="Desarrollo Web">Web Development</h3>
                         <p class="service-description" data-en="Custom websites built with modern technologies that deliver exceptional user experiences" data-es="Sitios web personalizados construidos con tecnologías modernas que brindan experiencias de usuario excepcionales">Custom websites built with modern technologies that deliver exceptional user experiences</p>
                     </div>
+                    </a>
+                    <a href="https://www.rompecabeza.cl/" target="_blank" rel="noopener noreferrer" class="service-link" >
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-mobile-alt"></i>
@@ -77,6 +80,8 @@
                         <h3 class="service-title" data-en="Mobile Apps" data-es="Aplicaciones Móviles">Mobile Apps</h3>
                         <p class="service-description" data-en="Native and cross-platform mobile applications designed for performance and usability" data-es="Aplicaciones móviles nativas y multiplataforma diseñadas para rendimiento y usabilidad">Native and cross-platform mobile applications designed for performance and usability</p>
                     </div>
+                    </a>
+                    <a href="https://www.rompecabeza.cl/" target="_blank" rel="noopener noreferrer" class="service-link" >
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-chart-line"></i>
@@ -84,6 +89,8 @@
                         <h3 class="service-title" data-en="Digital Marketing" data-es="Marketing Digital">Digital Marketing</h3>
                         <p class="service-description" data-en="Strategic marketing campaigns that drive traffic and convert visitors into customers" data-es="Campañas de marketing estratégicas que generan tráfico y convierten visitantes en clientes">Strategic marketing campaigns that drive traffic and convert visitors into customers</p>
                     </div>
+                    </a>
+                    <a href="https://www.rompecabeza.cl/" target="_blank" rel="noopener noreferrer" class="service-link" >
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-paint-brush"></i>
@@ -91,6 +98,7 @@
                         <h3 class="service-title" data-en="UI/UX Design" data-es="Diseño UI/UX">UI/UX Design</h3>
                         <p class="service-description" data-en="Beautiful, intuitive interfaces that enhance user engagement and satisfaction" data-es="Interfaces hermosas e intuitivas que mejoran la participación y satisfacción del usuario">Beautiful, intuitive interfaces that enhance user engagement and satisfaction</p>
                     </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -127,8 +135,8 @@
                                     <img src="assets/image.png" alt="Testimonial Author">
                                 </div>
                                 <div class="author-info">
-                                    <h4 class="author-name" data-en="Michael Chen" data-es="Michael Chen">Michael Chen</h4>
-                                    <p class="author-title" data-en="CEO, Innovate Solutions" data-es="CEO, Innovate Solutions">CEO, Innovate Solutions</p>
+                                    <h4 class="author-name" data-en="Alexis Contreras" data-es="Alexis Contreras">Alexis Contreras</h4>
+                                    <p class="author-title" data-en="Technical Lead " data-es="Lider Técnico">Technical Lead</p>
                                 </div>
                             </div>
                         </div>
@@ -141,8 +149,8 @@
                                     <img src="assets/image.png" alt="Testimonial Author">
                                 </div>
                                 <div class="author-info">
-                                    <h4 class="author-name" data-en="Emily Rodriguez" data-es="Emily Rodriguez">Emily Rodriguez</h4>
-                                    <p class="author-title" data-en="Founder, Style Boutique" data-es="Fundadora, Style Boutique">Founder, Style Boutique</p>
+                                    <h4 class="author-name" data-en="Exequiel Alvarado" data-es="Exequiel Alvarado">Exequiel Alvarado</h4>
+                                    <p class="author-title" data-en="Frontend Developer" data-es="Desarrollador Fronted">Frontend Developer</p>
                                 </div>
                             </div>
                         </div>
@@ -304,10 +312,10 @@
                 <div class="footer-column">
                     <h3 class="footer-title" data-en="Follow Us" data-es="Síguenos">Follow Us</h3>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://web.facebook.com/Rompecabeza.cl/photos/?_rdc=1&_rdr#" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-facebook-f"></i>
+                        <a href="https://www.rompecabeza.cl/blog/" class="social-link" target="_blank" rel="noopener noreferrer" ><i class="fab fa-twitter"></i>
+                        <a href="https://www.instagram.com/rompecabeza.cl/" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/rompecabeza-digital/posts/?feedView=all" class="social-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
@@ -317,6 +325,6 @@
         </div>
     </footer>
 
-    <script src="/scripts.js"></script>
+    <script src="/scripts.js/"></script>
 </body>
 </html>
