--- a/index.html
+++ b/index.html
@@ -325,6 +325,6 @@
         </div>
     </footer>
 
-    <script src="/scripts.js/"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
